--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
-    "mongoose": "^4.11.10"
+    "method-override": "^2.3.9",
+    "mongoose": "^4.11.10",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   }
 }
