--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   "homepage": "https://github.com/DeathofaSellout/micdrop#readme",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "ejs": "^2.5.7",
     "express": "^4.15.4",
-    "mongoose": "^4.11.10"
+    "method-override": "^2.3.9",
+    "mongoose": "^4.11.10",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1"
   }
 }
